--- a/css/index.css
+++ b/css/index.css
@@ -29,12 +29,14 @@ a{
     line-height:67px;
     font-size:18px;
     border-right:1px solid #e5e5e5;
+    border-bottom:1px solid #e5e5e5;
     width:14.25%;
     text-align: center;
     white-space: nowrap;
     padding:0 1%;
-
+    cursor: pointer;
 }
+
 .container ul li a{
     color:#333;
 }
